--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "static-engine-pager",
-  "version": "1.0.0",
-  "description": "Middleware for static-engine.",
+  "version": "1.1.0",
+  "description": "Middleware for static-engine. Add next and previous properties to each element of the collection.",
   "main": "index.js",
   "repository": "erickmerchant/static-engine-pager",
+  "keywords": [
+      "static-engine"
+  ],
   "author": "Erick Merchant <erickmerchant@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -11,6 +14,5 @@
   },
   "homepage": "https://github.com/erickmerchant/static-engine-pager",
   "dependencies": {
-    "lodash": "^2.4.1"
   }
 }
