--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "static-engine-pager",
   "version": "1.1.0",
-  "description": "Middleware for static-engine. Add next and previous properties to each element of the collection.",
+  "description": "Plugin for static-engine. Add next and previous properties to each element of the collection.",
   "main": "index.js",
   "repository": "erickmerchant/static-engine-pager",
   "keywords": [
@@ -14,5 +14,8 @@
   },
   "homepage": "https://github.com/erickmerchant/static-engine-pager",
   "dependencies": {
+  },
+  "peerDependencies": {
+    "static-engine": "^2.0.0"
   }
 }
