--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "homepage": "https://github.com/erickmerchant/static-engine-pager",
   "dependencies": {},
   "peerDependencies": {
-    "static-engine": "^3.0.0"
+    "static-engine": ">=3.0.0 <5.0.0"
   },
   "devDependencies": {
     "chai": "^1.9.2",
