--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "url": "https://github.com/erickmerchant/static-engine-pager/issues"
   },
   "homepage": "https://github.com/erickmerchant/static-engine-pager",
-  "dependencies": {},
+  "dependencies": {
+    "es6-promise": "^2.0.0"
+  },
   "peerDependencies": {
-    "static-engine": ">=3.0.0 <5.0.0"
+    "static-engine": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^1.9.2",
