--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "static-engine-pager",
   "version": "3.2.0",
-  "description": "Plugin for static-engine. Add next and previous properties to each element of the collection.",
+  "description": "Plugin for static-engine. Add next and previous properties to each object of the collection.",
   "main": "index.js",
   "repository": "erickmerchant/static-engine-pager",
   "keywords": [
@@ -16,5 +16,8 @@
   "dependencies": {},
   "devDependencies": {
     "mocha": "^2.0.1"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
