Adopt JavaScript Standard Style

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "homepage": "https://github.com/erickmerchant/static-engine-pager",
   "dependencies": {},
   "devDependencies": {
-    "mocha": "^2.0.1"
+    "mocha": "^2.0.1",
+    "standard": "^3.5.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "standard && mocha"
   }
 }
