--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "homepage": "https://github.com/erickmerchant/static-engine-pager",
   "dependencies": {},
   "devDependencies": {
+    "istanbul": "^0.3.13",
     "mocha": "^2.0.1",
     "standard": "^3.5.0"
   },
   "scripts": {
-    "test": "standard && mocha"
+    "test": "standard && mocha",
+    "cover": "istanbul cover node_modules/.bin/_mocha"
   }
 }
