--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "homepage": "https://github.com/erickmerchant/static-engine-pager",
   "dependencies": {},
   "devDependencies": {
+    "faucet": "0.0.1",
+    "nyc": "^8.1.0",
     "standard": "^8.0.0",
-    "tap": "^6.3.0"
+    "tape": "^4.6.0"
   },
   "scripts": {
-    "test": "standard && tap test.js",
-    "cover": "tap test.js --cov --coverage-report=html"
+    "test": "standard && tape 'test.js' | faucet",
+    "cover": "nyc --reporter=html npm test"
   }
 }
